fixed spacing between feature item

--- a/src/assets/styles/scss/components/header/_header.scss
+++ b/src/assets/styles/scss/components/header/_header.scss
@@ -10,3 +10,16 @@
     max-width: 200px;
   }
 }
+
+.margin--both {
+  margin: 0 40px;
+}
+
+.margin--right {
+  margin-right: 40px;
+}
+
+.margin--left {
+  margin-left: 40px;
+
+}
